# Messwerk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clickable.json  harbour-messwerk.apparmor  harbour-messwerk.desktop  harbour-messwerk.desktop.in  harbour-messwerk.pro  harbour-messwerk.qrc  main.cpp  manifest.json  manifest.json.in  messwerk.apparmor  messwerk.desktop
plugins/: CMakeLists.txt
plugins/Messwerk/: CMakeLists.txt  messwerk.cpp  messwerk.h  plugin.cpp  plugin.h  qmldir
po/: fr.po  harbour-messwerk.mymike00.pot  it.po  nl.po
qml/: Messwerk.qml  Theme.js  qtquickcontrols2.conf
qml/pages/: AccelPage.qml  FirstPage.qml  GyroPage.qml  InfoPage.qml  LightPage.qml  MagnetPage.qml  PositionPage.qml  PressurePage.qml  RotationPage.qml  SatellitePage.qml  SettingsDialog.qml
src/: CMakeLists.txt  Messwerk.cpp  Messwerk.h  gyroscope.cpp  gyroscope.h  magnetometer.cpp  magnetometer.h  plotwidget.cpp  pressuresensor.cpp  pressuresensor.h  sensor.cpp  sensor.h  settings.h  wakelock.cpp  wakelock.h
translations/: harbour-messwerk-de.ts  harbour-messwerk-pl.ts  messwerk-sv.ts  messwerk.ts
